--- a/Window.vcxproj.filters
+++ b/Window.vcxproj.filters
@@ -36,4 +36,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <CudaCompile Include="raytrace.cu" />
+  </ItemGroup>
 </Project>
