--- a/Window.vcxproj
+++ b/Window.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="raystructs.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="cuda_structs.cuh" />
     <ClInclude Include="raytrace.cuh" />
     <ClInclude Include="main.h" />
     <ClInclude Include="raytrace.h" />
