--- a/Window.vcxproj.filters
+++ b/Window.vcxproj.filters
@@ -36,6 +36,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="raytrace.cuh" />
+    <ClInclude Include="cuda_structs.cuh" />
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="raytrace.cu" />
