--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,10 @@ name: "format code"
 on:
   pull_request:
     branches:
-      - develop
+      - dev
+  push:
+    branches:
+      - master
 
 jobs:
   format:
