Chaotic SAL annotations and some cleaning up setting pixel colors Everything works

--- a/Window.vcxproj
+++ b/Window.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="raystructs.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="helper.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="raytrace.h" />
     <ClInclude Include="raystructs.h" />
