--- a/Window.vcxproj.filters
+++ b/Window.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="raytrace.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="helper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
